# voice-deck

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: index.html
templates/: default.html
tests/: test_build.py
voice_deck/: build.py  cli.py  record.py  structure.py
voice_deck.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
