[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-deck"
version = "0.1.0"
description = "話すだけで Markdown スライドが生まれる CLI ツール"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "anthropic>=0.117",
    "openai>=2.0",
    "sounddevice>=0.5",
    "numpy>=2.0",
    "scipy>=1.10",
]

[project.scripts]
voice-deck = "voice_deck.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["voice_deck*"]
